# parallel-collision-detection-volume-computation

./: CMakeLists.txt  README.md  client_experiment.py  experiment.cpp  rui_locations.jsonld  run.sh  server2.cpp  service.cpp  tissue_mesh.off
geometry/: RTree.h  algo.cpp  algo.h  mymesh.cpp  mymesh.h  utils.cpp  utils.h
include/: service.h
model/: test_tissue.off
model/plain_filling_hole_five_organ/Allen_M_Brain/: Allen_amygdalohippocampal_area_L.off  Allen_amygdalohippocampal_area_R.off  Allen_angular_gyrus_L.off  Allen_angular_gyrus_R.off  Allen_anterior_amygdaloid_area_L.off  Allen_anterior_amygdaloid_area_R.off  Allen_anterior_commissure_L.off  Allen_anterior_commissure_R.off  Allen_anterior_cortical_nucleus_L.off  Allen_anterior_cortical_nucleus_R.off  Allen_anterior_horn_of_lateral_ventricle_L.off  Allen_anterior_horn_of_lateral_ventricle_R.off  Allen_anterior_intermediate_orbital_gyrus_L.off  Allen_anterior_intermediate_orbital_gyrus_R.off  Allen_anterior_nuclear_complex_of_thalamus_L.off  Allen_anterior_nuclear_complex_of_thalamus_R.off  Allen_anterior_olfactory_nucleus_L.off  Allen_anterior_olfactory_nucleus_R.off  Allen_anterior_parahippocampal_gyrus_L.off  Allen_anterior_parahippocampal_gyrus_R.off  Allen_atrium_of_lateral_ventricle_L.off  Allen_atrium_of_lateral_ventricle_R.off  Allen_basal_forebrain_L.off  Allen_basal_forebrain_R.off  Allen_basilar_part_of_pons_L.off  Allen_basilar_part_of_pons_R.off  Allen_basolateral_nucleus_basal_nucleus_L.off  Allen_basolateral_nucleus_basal_nucleus_R.off  Allen_basomedial_nucleus_accessory_basal_nucleus_L.off  Allen_basomedial_nucleus_accessory_basal_nucleus_R.off  Allen_body_of_caudate_L.off  Allen_body_of_caudate_R.off  Allen_body_of_hippocampus_L.off  Allen_body_of_hippocampus_R.off  Allen_body_of_lateral_ventricle_L.off  Allen_body_of_lateral_ventricle_R.off  Allen_central_canal_of_medulla_oblongata_L.off  Allen_central_canal_of_medulla_oblongata_R.off  Allen_central_nuclear_group_L.off  Allen_central_nuclear_group_R.off  (+185 more)
(+136 files in other folders)
